--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.10.0",
+    "@jest/globals": "^30.0.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^4.1.0",
+    "idb": "^8.0.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.10.0",
-    "lucide-react": "^0.525.0",
-    "@reduxjs/toolkit": "^2.8.2",
-    "react-redux": "^9.2.0",
-    "@jest/globals": "^30.0.4",
-    "idb": "^8.0.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
